# pedroai

./: README.md  pylintrc  pyproject.toml
.github/workflows/: python-package.yml
pedroai/: __init__.py  bibtex.py  download.py  files.py  io.py  iter.py  main.py  notifications.py  plot.py  result.py  slurm_logs.py  slurm_tui.py  snapshot.py
pedroai/slurm_tui_styles/: style.css
tests/: test_io.py  test_iter.py  test_pedroai.py  test_result.py
