[tool.poetry]
name = "pedroai"
version = "0.5.0"
description = ""
authors = ["Pedro Rodriguez <me@pedro.ai>"]

[tool.poetry.dependencies]
python = "^3.8, <3.12"
requests = "^2.30.0"
pysimdjson = {extras = ["dev"], version = "^5.0.2"}
typer = "^0.9.0"
toml = "^0.10.2"
pydantic = "^1.9.0"
rich = "13.*"
altair-saver = "^0.5.0"
altair = "^5.0.0"
scipy = "1.*"
bibtexparser = "^1.4.0"
tantivy = "^0.13.2"
textual = "^0.26.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
black = "23.*"
pylint = "2.17.*"
mypy = "^0.950"
isort = "^5.10.1"
types-requests = "^2.30.0"
types-toml = "^0.10.7"

[tool.poetry.scripts]
pedroai = "pedroai.main:cli"
snapshot = "pedroai.snapshot:cli"
slogs = "pedroai.slurm_logs:cli"

[tool.poetry.group.dev.dependencies]
ipython = "^8.8.0"
jupyterlab = "^3.5.2"
jupyter-http-over-ws = "^0.0.8"

[tool.isort]
known_first_party = "pedroai"
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
